# trading-research-system

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: alpaca_historical.sample.json  catalyst.sample.json  market_data.sample.json  modelling.sample.json  retail_attention.sample.json  shadow_monitor.sample.json  shadow_sec.sample.json  shadow_sec_alpaca.sample.json  shadow_sec_alpaca_halts.sample.json  shadow_sec_alpaca_halts_replay.sample.json  shadow_sec_alpaca_replay.sample.json  shadow_sec_replay.sample.json  validation.sample.json
config/fixtures/: sec_alpaca_halts_replay.json  sec_alpaca_replay.json  sec_replay.json
docs/: ALPACA_HISTORICAL.md  ARCHITECTURE.md  CATALYST_INTELLIGENCE.md  DATA_DICTIONARY.md  DATA_SOURCES.md  IMPLEMENTATION_PLAN.md  MARKET_DATA_PIPELINE.md  MODELLING.md  PREDICTION_SCHEMA.md  RETAIL_ATTENTION.md  SHADOW_MONITOR.md  VALIDATION.md
reports/: ALPACA_HISTORICAL_QUALITY_AUDIT_20260717.md  VALIDATION_REPORT.md
src/equity_research/: __init__.py
src/equity_research/catalyst_intelligence/: __init__.py  contracts.py  pipeline.py  provider.py  quality.py  (+3 more)
tests/: __init__.py  test_alpaca_historical.py  test_attention_pipeline.py  test_attention_quality.py  test_attention_scoring.py  test_calendar.py  test_catalyst_pipeline.py  test_catalyst_quality.py  test_catalyst_rules.py  test_features.py  test_modelling_models.py  test_modelling_pipeline.py  test_modelling_quality.py  test_modelling_splitting.py  test_pipeline.py  test_quality.py  test_shadow_monitor.py  test_transforms.py  test_validation_red_team.py
(+43 files in other folders)
